--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Yuxiang Cao",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/contracts-upgradeable": "^4.5.2"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.21",
@@ -32,10 +34,11 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
+    "ethers": "^5.6.4",
     "hardhat": "^2.9.3",
     "hardhat-gas-reporter": "^1.0.4",
     "husky": "^7.0.4",
+    "install-peers": "^1.0.3",
     "lint-staged": "^12.3.7",
     "node-fetch": "2",
     "prettier": "^2.3.2",
